<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">물을 주세요!</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>

	<string name="btn_small">150</string>
	<string name="btn_medium">250</string>
	<string name="btn_big">500</string>
	<string name="btn_edit">수정</string>
	<string name="btn_edit_clicked">완료</string>
	<string name="btn_delete">삭제</string>

	<string name="cd_text_bg">Text Background Color</string>

	<string name="user_age">나이</string>

	<string name="hint_age">29</string>

	<string name="male">남</string>
	<string name="female">여</string>

	<string name="be_expection_a_baby">임신 중</string>
	<string name="feeding_a_baby">수유 중</string>

	<string name="warning_input_age">나이는 숫자로 입력해 주세요.</string>
	<string name="warning_age_invalid">나이는 0 ~ 120살까지 입력할 수 있습니다.</string>
	<string name="warning_number_format">숫자만 입력하실 수 있습니다.</string>
	<string name="warning_no_data">저장한 데이터가 없습니다.</string>

	<string name="warning_no_data_on_listview">표시할 데이터가 없습니다.</string>

</resources>
