<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
    android:paddingBottom="5dp"
	android:background="@drawable/widget_bg">
	
	<TextView
		android:id="@+id/tv_today_quantity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_centerVertical="true"
		android:layout_alignParentLeft="true"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:gravity="center" />

	<TextView
		android:id="@+id/tv_today_percentage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_today_quantity"
		android:layout_alignLeft="@id/tv_today_quantity"
		android:layout_alignRight="@id/tv_today_quantity"
		android:textColor="@android:color/black"
		android:textSize="13dp"
		android:gravity="center" />

	<Button
		android:id="@+id/btn_small"
		android:layout_width="64dp"
		android:layout_height="64dp"
		android:layout_alignTop="@id/tv_today_quantity"
        android:layout_toLeftOf="@+id/btn_medium"
		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:text="@string/btn_small"/>
	
	<Button
		android:id="@id/btn_medium"
		android:layout_width="64dp"
		android:layout_height="64dp"
        android:layout_alignTop="@id/tv_today_quantity"
        android:layout_toLeftOf="@+id/btn_big"
        android:layout_marginLeft="5dp"
		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:text="@string/btn_medium"/>

	<Button
		android:id="@id/btn_big"
		android:layout_width="64dp"
		android:layout_height="64dp"
        android:layout_alignTop="@id/tv_today_quantity"
		android:layout_marginRight="5dp"
		android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:text="@string/btn_big"/>
		
</RelativeLayout>
